// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders with messages 1`] = `
<div
  className="rs-panel rs-panel-default"
>
  <div
    className="rs-panel-heading"
    onClick={[Function]}
    role="rowheader"
    tabIndex={-1}
  >
    <ol
      aria-label="breadcrumbs"
      className="rs-breadcrumb"
      role="navigation"
    >
      <li
        className="rs-breadcrumb-item"
      >
        <a
          href="/"
          onClick={[Function]}
          passHref={true}
          title="Home"
        >
          <i
            className="rs-icon rs-icon-home"
          />
        </a>
      </li>
    </ol>
  </div>
  <div
    className="rs-panel-body"
  >
    <div
      className="rs-panel-group"
    >
      <div
        className="rs-panel rs-panel-default"
      >
        <div
          className="rs-panel-body"
        >
          <div
            className="rs-content"
          >
            <div
              className="rs-flex-box-grid rs-flex-box-grid-top rs-flex-box-grid-start"
            >
              <div
                className="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <div
                  className="rs-avatar mr-3 rs-avatar-lg"
                  title="Test user"
                >
                  Tu
                </div>
              </div>
              <div
                className="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <p>
                  2020-03-02T00:00:00.000Z
                </p>
                <p>
                  First !!!
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders with new message box 1`] = `
<div
  className="rs-panel rs-panel-default"
>
  <div
    className="rs-panel-heading"
    onClick={[Function]}
    role="rowheader"
    tabIndex={-1}
  >
    <ol
      aria-label="breadcrumbs"
      className="rs-breadcrumb"
      role="navigation"
    >
      <li
        className="rs-breadcrumb-item"
      >
        <a
          href="/"
          onClick={[Function]}
          passHref={true}
          title="Home"
        >
          <i
            className="rs-icon rs-icon-home"
          />
        </a>
      </li>
    </ol>
  </div>
  <div
    className="rs-panel-body"
  >
    <div
      className="rs-panel-group"
    >
      <div
        className="rs-panel rs-panel-default"
      >
        <div
          className="rs-panel-body"
        >
          <div
            className="rs-content"
          >
            <div
              className="rs-flex-box-grid rs-flex-box-grid-top rs-flex-box-grid-start"
            >
              <div
                className="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <div
                  className="rs-avatar mr-3 rs-avatar-lg"
                  title="Test user"
                >
                  Tu
                </div>
              </div>
              <div
                className="rs-flex-box-grid-item rs-flex-box-grid-item-0"
              >
                <p>
                  2020-03-02T00:00:00.000Z
                </p>
                <p>
                  First !!!
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rs-panel rs-panel-default"
      >
        <div
          className="rs-panel-body"
        >
          <div
            className="mb-3"
          >
            <div
              className="rs-nav rs-nav-subtle rs-nav-horizontal"
            >
              <ul>
                <li
                  className="rs-nav-item preview-strip-1 rs-nav-item-active"
                >
                  <a
                    className="rs-nav-item-content"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    Text
                    <span
                      className="rs-ripple-pond"
                    >
                      <span
                        className="rs-ripple"
                        style={Object {}}
                      />
                    </span>
                  </a>
                </li>
                <li
                  className="rs-nav-item preview-strip-2"
                >
                  <a
                    className="rs-nav-item-content"
                    onClick={[Function]}
                    role="button"
                    tabIndex={0}
                  >
                    Preview
                    <span
                      className="rs-ripple-pond"
                    >
                      <span
                        className="rs-ripple"
                        style={Object {}}
                      />
                    </span>
                  </a>
                </li>
              </ul>
              <div
                className="rs-nav-waterline"
              />
            </div>
            <textarea
              className="rs-input"
              id={null}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Enter message..."
              rows={10}
              style={
                Object {
                  "resize": "both",
                }
              }
              type="text"
              value=""
            />
          </div>
          <button
            className="rs-btn rs-btn-primary"
            onClick={[Function]}
            type="button"
          >
            Submit
            <span
              className="rs-ripple-pond"
            >
              <span
                className="rs-ripple"
                style={Object {}}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renders with no messages 1`] = `
<div
  className="rs-panel rs-panel-default"
>
  <div
    className="rs-panel-heading"
    onClick={[Function]}
    role="rowheader"
    tabIndex={-1}
  >
    <ol
      aria-label="breadcrumbs"
      className="rs-breadcrumb"
      role="navigation"
    >
      <li
        className="rs-breadcrumb-item"
      >
        <a
          href="/"
          onClick={[Function]}
          passHref={true}
          title="Home"
        >
          <i
            className="rs-icon rs-icon-home"
          />
        </a>
      </li>
    </ol>
  </div>
  <div
    className="rs-panel-body"
  >
    <div
      className="rs-panel-group"
    />
  </div>
</div>
`;
